--- a/web/index.html
+++ b/web/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="scaffolded-by" content="https://github.com/dart-lang/sdk">
-    <title>real_estate_consultants</title>
+    <title>real_estate</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="main.dart.js"></script>
 </head>
 
 <body>
-
+    <h1>hi</h1>
   <div id="output"></div>
 
 </body>
